# WeatherStationIoT

./: .gitignore  README.md
oslib/ahu_drivers/ahu_ble/: ahu_ble.c  ahu_ble.h  ble_base.c  ble_base.h
oslib/ahu_drivers/ahu_data/: ahu_data.c  ahu_data.h
oslib/ahu_drivers/ahu_shell/: ahu_shell.c  ahu_shell.h  shell_base.c  shell_base.h  shell_led.c  shell_led.h  shell_scu.c  shell_scu.h  shell_time.c  shell_time.h
oslib/common/: ble_uuid.h  hci_driver.c  hci_driver.h  led_driver.c  led_driver.h  log_driver.h  pb_driver.c  pb_driver.h
oslib/scu_drivers/scu_ble/: scu_ble.c  scu_ble.h
oslib/scu_drivers/scu_power_management/: scu_power_management.c  scu_power_management.h
oslib/scu_drivers/scu_sensors/: scu_sensors.c  scu_sensors.h
prac1/: README.md
prac1/ahu/: CMakeLists.txt  README.md  autobuild  bt.conf  mqtt_publish.py  mqtt_subscribe.py  prj.conf  shell.conf  test.py  usb.conf
prac1/ahu/src/: main.c
prac1/scu/: CMakeLists.txt  autobuild  prj.conf
prac1/scu/src/: main.c  sens.c  sens.h
test/: bt.conf  prj.conf
test/inc/: mobile_connect.h
test/src/: hal_imu.c  mobile_connect.c  mobile_node_ble.c
